# necti

./: .gitignore  .gitmodules  64asm.rsrc  64x0-cc.rsrc  64x000-cc.rsrc  CITATION.cff  CODEOWNERS  Doxyfile  MailMap  README.md  ReadMe.md  bpp.rsrc  build-unix.json  build.json  cl-dev.cxxflags  cl-dev.files  codetools.10x  codetools.files  codetools.includes  compile_flags.txt  dbg.json  format.sh  i64asm.rsrc  lc-osx-san.json  lc-osx.json  lc-posix.json  ld-nekernel.json  ld-osx.json  link.rsrc  mac.json  make_docs.sh  makefile  osx.json  posix.json  posix.make  power-cc.rsrc  ppc-cc.rsrc  ppcasm.rsrc  run_format.sh  win32.json  (+1 more)
64x0/: .gitignore  64asm.cc  bpp.cc  makefile
64x0-Drivers/: .gitignore  64asm.cc  64ld.cc  bccl.cc  bpp.cc  ccplus.cc  makefile
C++Kit/: Defines.hpp  ParserKit.hpp
Comm/: CompilerKit.hpp  Defines.hpp  ParserKit.hpp  Version.hxx
Common/: CompilerKit.hpp  Defines.hpp  ParserKit.hpp
CompilerDriver/: .gitignore  bccl.cc  cc.cc  cc.cxx  ccplus.cc  ccplus.cxx  cpp.cc  cpp.cxx  ld.cc  ld.cxx  makefile  masm.cc  masm.cxx
CompilerKit/: Compiler.hpp  Defines.hpp  ParserKit.hpp
CompilerTools/: install.d  makefile
Design/: X64000.circ
Doc/: notice.txt
Documentation/: TODO.txt
Drivers/: 32asm.cc  64asm.cc  bccl.cc  bpp.cc  ccplus.cc  ld.cc  makefile
Examples/: Example64k.s  ExampleAMD64.asm  ExampleAMD64_Return.asm  ExampleCDialect.S  ExampleCDialect.c  ExampleCDialect.cc  ExampleCPlusPlus.cxx  ExampleCPlusPlus.s  ExamplePowerPC.S  ExamplePowerPC.S.pp  ExamplePowerPC.dmp  (+2 more)
tests/test_02_linker/: CMakeLists.txt  linker_test.cc
(+720 files in other folders)
